# igv-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
crates/igv-core/: Cargo.toml
crates/igv-core/examples/: gen_small_bw.rs
crates/igv-core/src/: alignment.rs  collect.rs  coverage.rs  error.rs  lib.rs  region.rs  render.rs  render_inputs.rs
crates/igv-core/src/source/: annotation.rs  bam.rs  fasta.rs  link.rs  mod.rs  signal.rs  vcf.rs
crates/igv-core/src/source/annotation/: bed.rs  gff.rs
crates/igv-core/src/source/link/: bedpe.rs
crates/igv-core/src/source/signal/: bigwig.rs
crates/igv-core/tests/: annotation_bed.rs  annotation_dispatch.rs  annotation_gff.rs  bam_source.rs  collect_link.rs  collect_render_inputs.rs  fasta_source.rs  link_bedpe.rs  link_format.rs  signal_bigwig.rs  signal_format.rs  vcf_source.rs
crates/igv-core/tests/data/: README.md  sample.bam  sample.bam.bai  sample.bed  sample.bedpe  sample.fa  sample.fa.fai  sample.gff3  sample.gtf  sample.vcf.gz.tbi  small.bw
crates/igv-render/: Cargo.toml
crates/igv-render/src/: error.rs  layout.rs  lib.rs  options.rs  png.rs  theme.rs
crates/igv-render/src/svg/: alignments.rs  annotations.rs  coverage.rs  doc.rs  header.rs  link.rs  mod.rs  ruler.rs  signal.rs  variants.rs
crates/igv-render/tests/: link_svg_snapshot.rs  png_smoke.rs  svg_snapshots.rs
crates/igv-render/tests/snapshots/: svg_snapshots__alignments_only_two_reads.snap  svg_snapshots__annotations_only_two_transcripts.snap  svg_snapshots__coverage_only_one_bam_two_reads.snap  svg_snapshots__empty_view_header_ruler.snap  svg_snapshots__signal_only_one_bigwig.snap  svg_snapshots__variants_only_three_records.snap
crates/igv-rs/: Cargo.toml
crates/igv-rs/src/: command.rs  lib.rs  logging.rs  main.rs
crates/igv-rs/src/app/: action.rs  loader.rs  mod.rs  state.rs
crates/igv-rs/src/snapshot/: genes.rs  naming.rs
crates/igv-rs/src/ui/: layout.rs
crates/igv-rs/src/ui/widgets/: alignments.rs  annotations.rs  coverage.rs  footer.rs  help.rs  sequence.rs  signal.rs  variants.rs
crates/igv-rs/tests/: cli_snapshot_args.rs  gene_navigation.rs  link_dispatch.rs  link_widget_snapshot.rs  render_smoke.rs  signal_dispatch.rs  snapshot_batch_bed.rs  snapshot_batch_genes.rs
crates/igv-serve/: Cargo.toml
crates/igv-serve/assets/: igv.esm.min.js  index.html
crates/igv-serve/src/: error.rs  feature_json.rs  lib.rs  state.rs  view.rs
crates/igv-serve/src/routes/: assets.rs  config.rs  features.rs  file.rs  index.rs  jump.rs  mod.rs  sse.rs
crates/igv-serve/tests/: http.rs
crates/igv-tui/: Cargo.toml
crates/igv-tui/src/: cli.rs  input.rs  lib.rs  logging.rs  main.rs
crates/igv-tui/src/app/: action.rs  loader.rs  mod.rs  serve.rs  state.rs
crates/igv-tui/src/snapshot/: batch.rs  mod.rs  regions.rs  writer.rs
crates/igv-tui/src/ui/: layout.rs  mod.rs  theme.rs
crates/igv-tui/src/ui/widgets/: alignments.rs  annotations.rs  coverage.rs  footer.rs  header.rs  help.rs  link.rs  mod.rs  overview.rs  ruler.rs  sequence.rs  signal.rs  variants.rs
crates/igv-tui/tests/: cli_snapshot_args.rs  gene_navigation.rs  link_dispatch.rs  link_widget_snapshot.rs  render_smoke.rs  signal_dispatch.rs  snapshot_batch_bed.rs  snapshot_batch_genes.rs
docs/: index.html  index.zh.html  style.css
docs/superpowers/manual-tests/: 2026-05-11-browser-serve.md
docs/superpowers/plans/: 2026-04-26-annotations.md  2026-04-26-igv-rs-rust-rewrite.md  2026-04-27-bigwig-signal.md  2026-04-28-snapshot-export.md  2026-04-29-bedpe-link.md  2026-05-11-browser-serve.md  2026-05-12-github-pages-docs.md
docs/superpowers/specs/: 2026-04-26-annotations-design.md  2026-04-26-igv-rs-rust-rewrite-design.md  2026-04-27-bigwig-signal-design.md  2026-04-28-snapshot-export-design.md  2026-04-29-bedpe-link-design.md  2026-05-11-browser-serve-design.md  2026-05-12-github-pages-docs-design.md
scripts/: update-igvjs.sh
