[package]
name = "igv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure async data layer for igv-rs: regions, source traits, alignment expansion, coverage, render thresholds. UI-free."

[dependencies]
async-trait.workspace = true
bigtools = { version = "0.5", default-features = false, features = ["read"] }
flate2 = "1"
futures.workspace = true
iset = "0.3"
noodles = { workspace = true, features = [
    "async", "core", "fasta", "bam", "sam", "vcf", "csi", "tabix", "bgzf",
    "gff", "bed",
] }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tracing.workspace = true

[dev-dependencies]
bigtools = { version = "0.5", default-features = false, features = ["read", "write"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
