[package]
name = "igv-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Graphical (SVG / PNG) snapshot renderer for igv-rs."

[dependencies]
igv-core = { path = "../igv-core", version = "0.7.0" }
thiserror.workspace = true

# PNG pipeline. Pure-Rust, no system deps.
usvg = { version = "0.42", default-features = false }
resvg = { version = "0.42", default-features = false }
tiny-skia = { version = "0.11", default-features = false, features = ["std", "png-format"] }

[dev-dependencies]
insta.workspace = true
