[package]
name = "igv-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive terminal genome viewer for FASTA / VCF / BAM / GFF / BED / bigWig / BEDPE. Includes a bundled-igv.js browser companion."

[[bin]]
name = "igv-rs"
path = "src/main.rs"

[dependencies]
igv-core = { path = "../igv-core", version = "0.7.0" }
igv-render = { path = "../igv-render", version = "0.7.0" }
igv-serve = { path = "../igv-serve", version = "0.7.0" }
webbrowser.workspace = true

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
futures.workspace = true
ratatui.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "fs", "io-util", "macros", "rt-multi-thread", "sync", "time", "signal",
] }
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tui-input.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
