[package]
name = "igv-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local HTTP server that mirrors the igv-rs TUI's view in igv.js."
include = [
    "src/**/*",
    "assets/index.html",
    "assets/igv.esm.min.js",
    "assets/igv.esm.min.js.version",
]

[dependencies]
igv-core = { path = "../igv-core", version = "0.7.0" }
axum.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "net", "fs"] }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
mime_guess.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest.workspace = true
tempfile.workspace = true
insta = { workspace = true, features = ["json"] }
